--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: 1.0.0
+  image_picker: 0.8.3+2
 
 flutter:
   uses-material-design: true
