--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: 1.0.0
   image_picker: 0.8.3+2
+  provider: 6.0.0
 
 flutter:
   uses-material-design: true
