--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   flutter_lints: 1.0.0
   image_picker: 0.8.3+2
   provider: 6.0.0
+  cloud_firestore: 2.5.0
 
 flutter:
   uses-material-design: true
