--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dev_dependencies:
   image_picker: 0.8.3+2
   provider: 6.0.0
   cloud_firestore: 2.5.0
+  firebase_auth: 3.0.2
 
 flutter:
   uses-material-design: true
