--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,12 +26,13 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to let you pick an image.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to let you pick an image.</string>
+
 	<key>UISupportedInterfaceOrientations</key>
-	<key>We need access to let you pick an image.</key>
-	<string>NSCameraUsageDescription</string>
-	<key>We need access to let you pick an image.</key>
-	<string>NSMicrophoneUsageDescription</string>
-	<key>We need access to let you pick an image.</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
